Overlay will show somethign, but not correct.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   cv_bridge
   image_transport
+  image_geometry
 )
 
 add_message_files(
@@ -77,6 +78,9 @@ target_link_libraries(plan_tf_broadcaster ${catkin_LIBRARIES})
 
 add_executable(switch_node src/switch_node.cpp)
 target_link_libraries(switch_node ${catkin_LIBRARIES})
+
+add_executable(switch_node_no_ff src/switch_node_no_ff.cpp)
+target_link_libraries(switch_node_no_ff ${catkin_LIBRARIES})
 
 add_executable(task_space_traj_reset src/task_space_traj_reset.cpp)
 target_link_libraries(task_space_traj_reset ${catkin_LIBRARIES} ReflexxesTypeII)
