--- a/package.xml
+++ b/package.xml
@@ -64,6 +64,7 @@
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>image_geometry</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>roslib</build_export_depend>
@@ -78,6 +79,7 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
+  <build_export_depend>image_geometry</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>roslib</exec_depend>
@@ -93,6 +95,7 @@
   <exec_depend>libpcl-all</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
+  <exec_depend>image_geometry</exec_depend>
   
 
 
