made changes for the real robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,9 @@ target_link_libraries(pedal_controller ${catkin_LIBRARIES})
 add_executable(user_overlay src/user_overlay.cpp)
 target_link_libraries(user_overlay ${catkin_LIBRARIES})
 
+add_executable(user_overlay_planner src/user_overlay_planner.cpp)
+target_link_libraries(user_overlay_planner ${catkin_LIBRARIES})
+
 add_executable(sim_user_overlay src/sim_user_overlay.cpp)
 target_link_libraries(sim_user_overlay ${catkin_LIBRARIES})
 
